Fortify scan config